# List of changes

- Added setControlConfig method to SimpleDynamicFormComponent component
- Added getControlConfig method to SimpleDynamicFormComponent component