@@ -1,5 +1,5 @@
 export * from './config';
-export { AuthGuardService } from './auth-guard.service';
+export { AuthGuardService,AuthorizationsGuard } from './auth-guard.service';
 export { AuthInterceptorService } from './auth-interceptor.service';
 export { AuthService } from './auth.service';
 export { CanDeactivateGuard, CanComponentDeactivate } from './can-deactivate-guard.service';
